# zephirc

./: .clang-format  .cmake-format  .codecov.yml  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OWNERS.TXT  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  conanfile.txt  cpppcheck.supp  requirements.txt
.ci/: llvm-gcov.sh  make-test-coverage.sh
.github/: pull_request_template.md
cmake/: AddGoogleTests.cmake  Bootstrap.cmake  BuildTypes.cmake  CodeCoverage.cmake  CompilerOptions.cmake  ConanHelper.cmake  Cppcheck.cmake  CxxFlags.cmake  FindCppUnit.cmake  FindCriterion.cmake  FindGcov.cmake  FindLcov.cmake  FindRE2C.cmake  FindRe2c.cmake  FindSPDLOG.cmake  FindSPDLog.cmake  (+27 more)
docs/: CMakeLists.txt  Doxyfile.in  GettingStarted.md  Internals.md  custom.js  doxygen.css  footer.html  header.html  header.html.in  mainpage.hpp
share/: CMakeLists.txt
src/: CMakeLists.txt  config.cpp  filesystem.cpp  main.cpp  version.hpp
src/Config/: CMakeLists.txt  Config.cpp  Config.hpp  Context.cpp  Context.hpp  Ptr.hpp
src/Console/: Application.cpp  Application.hpp  CMakeLists.txt  Formatter.cpp  Formatter.hpp
src/Console/Commands/: AbstractCommand.cpp  AbstractCommand.hpp  ApiCommand.cpp  ApiCommand.hpp  BuildCommand.cpp  BuildCommand.hpp  CleanCommand.cpp  CleanCommand.hpp  CompileCommand.cpp  CompileCommand.hpp  FullCleanCommand.cpp  FullCleanCommand.hpp  GenerateCommand.cpp  GenerateCommand.hpp  InitCommand.cpp  InitCommand.hpp  InstallCommand.cpp  InstallCommand.hpp  StubsCommand.cpp  StubsCommand.hpp
src/FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  Ptr.hpp
src/cli/: CMakeLists.txt  application.cpp  application.hpp  formatter.cpp  formatter.hpp
src/cli/commands/: abstract_command.cpp  api.cpp  api.hpp  api_command.cpp  build.cpp  build.hpp  build_command.cpp  clean.cpp  clean.hpp  clean_command.cpp  command.cpp  compile.cpp  compile.hpp  compile_command.cpp  fullclean.cpp  fullclean.hpp  fullclean_command.cpp  generate.cpp  generate.hpp  generate_command.cpp  init.cpp  init.hpp  init_command.cpp  install.cpp  install.hpp  install_command.cpp  stubs.cpp  stubs.hpp  stubs_command.cpp
src/command/: scanner.hpp  scanner.re
src/commands/: CMakeLists.txt  CPPLINT.cfg  cmd.hpp  cmd_api.cpp  cmd_api.hpp  cmd_build.cpp  cmd_build.hpp  cmd_clean.cpp  cmd_clean.hpp  cmd_compile.cpp  cmd_compile.hpp  cmd_fullclean.cpp  cmd_fullclean.hpp  cmd_generate.cpp  cmd_generate.hpp  cmd_init.cpp  cmd_init.hpp  cmd_install.cpp  cmd_install.hpp  cmd_stubs.cpp  cmd_stubs.hpp  commands.cpp  commands.hpp  formatter.cpp  formatter.hpp  optionexception.cpp  optionexception.hpp  options.cpp  options.hpp  options.re  parse_result.hpp  scanner.cpp  scanner.hpp  scanner.re
src/config/: CMakeLists.txt  config.cpp  config.hpp  impl.hpp  ptr.hpp
src/config/config/: api.cpp  api.hpp  extra.cpp  extra.hpp  optimizations.cpp  optimizations.hpp  requires.cpp  requires.hpp  stubs.cpp  stubs.hpp  warnings.cpp  warnings.hpp
src/config/config/api/: theme.cpp  theme.hpp
src/config/config/api/theme/: options.cpp  options.hpp
src/config/config/api/theme/ptr/: options.hpp
src/config/config/api/theme/yaml/: options.cpp  options.hpp
src/config/config/api/yaml/: theme.cpp  theme.hpp
src/config/config/ptr/: extra.hpp  optimizations.hpp  requires.hpp  warnings.hpp
src/config/config/yaml/: api.cpp  api.hpp  extra.cpp  extra.hpp  optimizations.cpp  optimizations.hpp  requires.cpp  requires.hpp  stubs.cpp  stubs.hpp  warnings.cpp  warnings.hpp
src/config/yaml/: config.cpp  config.hpp
src/console/: CMakeLists.txt  application.cpp  application.hpp  formatter.cpp  formatter.hpp
src/console/commands/: abstract_command.cpp  abstract_command.hpp  api.cpp  api.hpp  build.cpp  build.hpp  clean.cpp  clean.hpp  compile.cpp  compile.hpp  fullclean.cpp  fullclean.hpp  generate.cpp  generate.hpp  init.cpp  init.hpp  install.cpp  install.hpp  stubs.cpp  stubs.hpp
src/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.hpp
src/logger/: CMakeLists.txt  facade.cpp  facade.hpp  logger.cpp  logger.hpp
src/optparser/: scanner.hpp
test/: CMakeLists.txt  argv.cpp  argv.hpp  commands.test.cpp  main.cpp  optparser.parser.cpp  test_helpers.cpp  test_helpers.hpp
test/commands/: api.options.cpp  common.options.cpp  none.options.cpp
tests/: .gitignore  CMakeLists.txt  Makefile  Properties.hpp.in  argv.cpp  argv.hpp  asserts.hpp  conanfile.txt  main.cpp  properties.hpp.in  setup.sh  setup.sh.in  t0001-global-options.sh
tests/Config/: CMakeLists.txt  ConfigBaseTest.cpp  ConfigBaseTest.hpp  ConfigFileSystemTest.cpp  ConfigInputTest.cpp
tests/Console/: ApplicationTest.cpp  CMakeLists.txt  FormatterTest.cpp
tests/Console/Commands/: ApiCommandTest.cpp  BuildCommandTest.cpp  CMakeLists.txt  CleanCommandTest.cpp  CompileCommandTest.cpp  FullCleanCommandTest.cpp  GenerateCommandTest.cpp  InitCommandTest.cpp  InstallCommandTest.cpp  StubsCommandTest.cpp
tests/Logger/: CMakeLists.txt  CmakeLists.txt  LoggerBaseTest.cpp  LoggerBaseTest.hpp
tests/commands/: api.options.cpp  build.options.cpp  clean.options.cpp  compile.options.cpp  formatter.options.cpp  fullclean.options.cpp  generate.options.cpp  global.options.cpp  help.options.cpp  init.options.cpp  install.options.cpp  none.options.cpp  stubs.options.cpp
tests/config/: config.base.cpp  config.decode.cpp  config.encode.cpp  config.filesystem.cpp  config.input.cpp  config.load.cpp  config_tester.hpp  tester.hpp
tests/config/config/: api.decode.cpp  api.encode.cpp  api.theme.decode.cpp  api.theme.encode.cpp  api.theme.options.decode.cpp  api.theme.options.encode.cpp  extra.decode.cpp  extra.encode.cpp  optimizations.decode.cpp  optimizations.encode.cpp  requires.decode.cpp  requires.encode.cpp  stubs.decode.cpp  stubs.encode.cpp  warnings.decode.cpp  warnings.encode.cpp
tests/env/: base.cpp  base.hpp
tests/fixtures/: legacy.yml  phalcon-4x.yml
tests/fixtures/config/: bad-config.yml  legacy.yml  phalcon-4x.yml
tests/logger/: logger.base.cpp
(+56 files in other folders)
